<resources>
    <string name="app_name">Android原型</string>
    <string name="title_main">主页</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="title_function">功能页</string>
    <string name="setting">设置</string>
    <string name="setting_success">设置成功</string>
    <string name="loading">加载中&#8230;</string>
    <string name="app_exit_hit">再按一次退出程序</string>

    <!--登陆相关-->
    <string name="title_login_cloud">云管理</string>
    <string name="login_user_hint">请输入手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_user_illegal">请输入正确的手机号</string>
    <string name="login_pwd_illegal">请输入正确的密码</string>
    <string name="login_auth_fail">未获取到授权码</string>
    <string name="login_token_fail">登录失败</string>
    <string name="logout_success">已登出</string>

    <string name="title_login_local">本地管理</string>
    <string name="login_admin_hint">请输入管理员账号</string>
    <string name="login_admin_illegal">请输入正确的管理员账号</string>
    <string name="login_admin_failure">登陆失败</string>
    <string name="login_admin_failure_notfx">请连接斐讯路由</string>
    <string name="login_admin_failure_pwd">账号或密码错误</string>


    <!--设备相关-->
    <string name="title_cloud_routers">我的设备</string>
    <string name="cloud_router_online">在线</string>
    <string name="cloud_router_outline">离线</string>
    <string name="cloud_router_empty">没有绑定的路由</string>
    <string name="un_bind_router">解绑</string>
    <string name="add_bind_rouer">添加设备</string>
    <string name="do_bind_failure_already">该设备已被其它账号绑定</string>
    <string name="do_bind_success">绑定成功</string>

    <!--WiFi相关-->
    <string name="wifi_setting">WiFi设置</string>
    <string name="wifi_ssid_hint">请输入WiFi名称，不能有中文哦</string>
    <string name="wifi_pwd_hint">请输入WiFi密码，至少8位</string>
    <string name="wifi_ssid_illegal">请输入合法的WiFi名称</string>
    <string name="wifi_pwd_illegal">请输入合法的WiFi密码</string>
    <string name="wifi_set_failure">WiFi设置失败</string>

    <!--其它-->
    <string name="text_crash">崩溃测试</string>
    <string name="app_check_update">检查更新</string>
    <string name="click_enter">点击进入</string>

    <!--工厂界面-->
    <string name="title_factory">工厂界面</string>
    <string name="h5_test">H5联调</string>
    <string name="target_sdk">targetSdkVersion</string>
    <string name="qudao">渠道号</string>
    <string name="umeng_key">UMENG_APPKEY</string>
    <string name="umeng_channel">UMENG_CHANNEL</string>
    <string name="baichuan">是否支持百川</string>
    <string name="buggly_id">BUGLY APPID</string>
    <string name="buggly_enable">BUGLY ENABLE_DEBUG</string>
    <string name="push_app_id">PUSH APPID</string>
    <string name="push_app_key">PUSH APPKEY</string>
    <string name="push_app_secret">PUSH APPSECRET</string>
    <string name="remote_switch_state">远程开关状态</string>
    <string name="remote_router_info">远程路由信息</string>
    <string name="umeng_push_d_token">友盟推送Device token</string>
    <string name="app_back_server">APP后台服务器</string>
    <string name="cloud_server">云账号服务器</string>
    <string name="cloud_device_server">云账号设备服务器</string>
    <string name="flavor">FLAVOR</string>
    <string name="build_type">BUILD_TYPE</string>
    <string name="android_auth">android authorities</string>
    <string name="ge_tui">个推</string>

    <!-- zxing -->
    <string name="zxing_title">扫一扫</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_status">请将二维码/条码放入框,即可自动扫描</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换 : ％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码 : 工业</string>
    <string name="preferences_decode_1D_product_title">一维码 : 商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>

</resources>
